src/objects/Case_Vendor_Subscription__c.object
<CustomObject>
    <description>Junction between Case and Subscription (Vendor)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Vendor Subscriptions</relationshipLabel>
        <relationshipName>Case_Vendor_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Case Vendor Subscriptions</relationshipLabel>
        <relationshipName>Case_Vendor_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CASE_Vendor_Subscription_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>CASE Vendor Subscription Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <formula>Case__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Replacement_Required__c</fullName>
        <formula>Case__r.Replacement_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Replacement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Within_Cir_Schedule__c</fullName>
        <formula>Case__r.Within_Circulation_Planning_Schedule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Within Cir Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Subscriptions (Vendor)</relationshipLabel>
        <relationshipName>Case_Vendor_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Complaint_Copies__c</fullName>
        <label>Complaint Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaint_From__c</fullName>
        <label>Complaint From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complaint_To__c</fullName>
        <label>Complaint To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Copies__c</fullName>
        <label>Credit Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goodwill_Amount__c</fullName>
        <label>Goodwill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goodwill_Copies__c</fullName>
        <label>Goodwill Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_No__c</fullName>
        <label>Issue No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Replace_From__c</fullName>
        <label>Replace From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replace_To__c</fullName>
        <label>Replace To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replacement_Copies__c</fullName>
        <label>Replacement Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <formula>TEXT( Case__r.Sub_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <formula>Subscription_Vendor__r.Subscription_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Vendor__c</fullName>
        <label>Subscription (Vendor)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Subscription_Vendor__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Address__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.Address__c</field>
                <operation>equals</operation>
                <valueField>Subscription_Vendor__c.Recipient__r.Address__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subscription_Vendor__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case_Vendor_Subscriptions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor_Debit__c</fullName>
        <label>Vendor Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Case Vendor Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CVS{0000000000}</displayFormat>
        <label>Case Vendor Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Vendor Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Complaint_Dates_cannot_be_future_dates</fullName>
        <active>true</active>
        <errorConditionFormula>Complaint_From__c &gt; today() || Complaint_To__c &gt; today()</errorConditionFormula>
        <errorMessage>Complaint Dates cannot be greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complaint_SubCantBeEditedByCSOAdmin</fullName>
        <active>true</active>
        <description>Subscription field cannot be edited by CSO admin when editing Complaint Cases.</description>
        <errorConditionFormula>AND($Profile.Name = &apos;CSO Admin&apos;, ISCHANGED( Subscription_Vendor__c), Case__r.RecordType.DeveloperName = &apos;Complaint Magazine&apos; )</errorConditionFormula>
        <errorMessage>CSO Admin cant edit subscription. Please contact CSO.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Copies_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISNULL(Replacement_Copies__c)), 
Complaint_Copies__c &lt; Replacement_Copies__c, 
FALSE 
)</errorConditionFormula>
        <errorMessage>Replacement Copies cannot be greater than Complaint Copies</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementFromDateWithinComplaintPeriod</fullName>
        <active>true</active>
        <errorConditionFormula>((Replace_From__c &gt; Complaint_To__c &amp;&amp; Replace_From__c &gt; Complaint_From__c) || (Replace_From__c &lt; Complaint_To__c &amp;&amp; Replace_From__c &lt; Complaint_From__c))</errorConditionFormula>
        <errorDisplayField>Replace_From__c</errorDisplayField>
        <errorMessage>Replacement From should be within Complaint Period.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementFromNotGreaterThan14</fullName>
        <active>true</active>
        <errorConditionFormula>Case__r.Replacement_Required__c &amp;&amp; Replace_From__c &lt; (TODAY()- 14)</errorConditionFormula>
        <errorDisplayField>Replace_From__c</errorDisplayField>
        <errorMessage>Replacement Issue From Date should not be older than  14 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementFromfieldRequired</fullName>
        <active>false</active>
        <description>Check Replacement Issue Date if Replacement is required for Complaint case.</description>
        <errorConditionFormula>ISBLANK( Replace_From__c ) &amp;&amp; Case__r.Replacement_Required__c</errorConditionFormula>
        <errorDisplayField>Replace_From__c</errorDisplayField>
        <errorMessage>Replacement Issue Date is required if Replacement Required checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementIssueDateFieldsRequired</fullName>
        <active>true</active>
        <description>Check Replacement Issue Date if Replacement is required for Complaint case.</description>
        <errorConditionFormula>(ISBLANK(Replace_To__c) || ISBLANK(Replace_From__c)) &amp;&amp; Case__r.Replacement_Required__c</errorConditionFormula>
        <errorMessage>Replacement Issue Dates are required if Replacement Required checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementReqReplacementCopies</fullName>
        <active>true</active>
        <errorConditionFormula>Case__r.RecordType.Name = &apos;Complaint - Newspaper&apos;
&amp;&amp; 
IF (Case__r.Replacement_Required__c = FALSE, Replacement_Copies__c &lt;&gt; null || Replacement_Copies__c &lt;&gt; 0, FALSE)</errorConditionFormula>
        <errorMessage>Replacement Required checkbox is unchecked, Replacement Copies should be blank or zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementToDateIsNotToday</fullName>
        <active>true</active>
        <errorConditionFormula>((Replace_To__c &gt; Complaint_To__c &amp;&amp; Replace_To__c &gt; Complaint_From__c) || (Replace_To__c &lt; Complaint_To__c &amp;&amp; Replace_To__c &lt; Complaint_From__c))</errorConditionFormula>
        <errorDisplayField>Replace_To__c</errorDisplayField>
        <errorMessage>Replacement To should be within Complaint Period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReplacementTofieldRequired</fullName>
        <active>false</active>
        <description>Check Replacement Issue Date if Replacement is required for Complaint case.</description>
        <errorConditionFormula>ISBLANK(Replace_To__c) &amp;&amp; Case__r.Replacement_Required__c</errorConditionFormula>
        <errorDisplayField>Replace_To__c</errorDisplayField>
        <errorMessage>Replacement Issue Date is required if Replacement Required checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubscriptionEdit</fullName>
        <active>true</active>
        <description>D-2200</description>
        <errorConditionFormula>OR($Profile.Name  = &apos;CSO Admin&apos;, CONTAINS($Profile.Name, &apos;Vendor&apos;)) &amp;&amp; ISCHANGED( Subscription_Vendor__c )</errorConditionFormula>
        <errorMessage>User cannot update subscription.</errorMessage>
    </validationRules>
</CustomObject>